# ai-manager

./: .env.example  .env.local  .env.production  .env.staging  .gitignore  AI_MANAGER_HEALTH_REPORT.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TRIGGER.md  Dockerfile  LICENSE  Makefile  PROGRESS_TRACKER.md  PROJECT_STATUS.md  QUICK_START_DEPLOYMENT.md  README.md  SECURITY.md  SIMPLE_DEPLOYMENT.md  check_server.py  demo_advanced_templates.py  demo_dashboard.py  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  first_prompt.txt  install.bat  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup-private-repo.bat  setup-private-repo.sh  setup.py  test_ai_integration.py  test_api.py  test_api_client.py  test_api_endpoints_quick.py  test_calculator_execution.py  test_dashboard.py  (+6 more)
.github/workflows/: ci-backup.yml.backup  ci.yml  comprehensive.yml  security.yml  simple.yml  simple.yml.backup
deploy/: deploy.sh
examples/: example_task.json  hello_task.json
github_logs/: 3_Code Quality (3.12).txt  3_Security Scan.txt  4_Security Scan.txt  4_Tests (3.12).txt  5_Code Quality (3.11).txt  5_Tests (3.12).txt  6_Tests (3.11).txt  7_Code Quality (3.11).txt  7_Code Quality (3.12).txt
github_logs/Code Quality (3.11)/: 16_Post Run actions_checkout@v4.txt  17_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python 3.11.txt  4_Cache pip dependencies.txt  5_Install dependencies.txt  6_Lint with ruff.txt  system.txt
github_logs/Code Quality (3.12)/: 16_Post Run actions_checkout@v4.txt  17_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python 3.12.txt  system.txt  (+3 more)
k8s/: ai-manager.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
ops/: Dockerfile  Makefile  docker-compose.yml
src/: manager.db-journal
test_diagnostics/: diagnostic_unknown_20250829_183552.json
tests/: __init__.py  ai_diagnostics.py  ai_error_context.py  conftest.py.bak  debug_task_queue.py  simple_test_runner.py  test_ai_iterative_debugging.py  test_basic_imports.py  test_cli_functionality.py  test_environment_validator.py  test_health_monitor.py  test_progressive_execution.py  test_real_world_system.py  test_result_analyzer.py  test_self_documenting.py
(+63 files in other folders)
